setup drawing spectre tilings by conway signature

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -11,18 +11,46 @@ deflated_png_M = $(depthsSM:%=mystic_d%.png)
 deflatedq_png_S = $(depthsSM:%=spectreq_d%.png)
 deflatedq_png_M = $(depthsSM:%=mysticq_d%.png)
 
+#
+# CONWAY SIGNATURES: HAT
+#
+
 hatsignatures=[0] [2] [6] [602] [026] [260] [1] [3] [4] [5]
 hatsigpngd6=${hatsignatures:%=hatconwaysig%_d6.png}
 hatsigpngd6z=${hatsignatures:%=hatconwaysig%_d6z.png}
 hatsigpngd7z=${hatsignatures:%=hatconwaysig%_d7z.png}
+hatsigpngd7zz=${hatsignatures:%=hatconwaysig%_d7zz.png}
 
 hatsigsd6: $(hatsigpngd6) hatconwaysig[5][5]_d6.png hatconwaysig[0][6]_d6.png hatconwaysig[0][6]bis_d6.png hatconwaysig[0][6][6]_d6.png
 hatsigsd6z: $(hatsigpngd6z) hatconwaysig[5][5]_d6z.png hatconwaysig[0][6]_d6z.png hatconwaysig[0][6]_d6z.png hatconwaysig[0][6][6]_d6z.png
+hatsigsd6zz: $(hatsigpngd6zz) hatconwaysig[5][5]_d6zz.png hatconwaysig[0][6]_d6zz.png hatconwaysig[0][6]_d6zz.png hatconwaysig[0][6][6]_d6zz.png
+
+#
+# CONWAY SIGNATURES: SPECTRE
+#
+
+spectresignatures=[0] [1] [2] [3] [4] [5] [6] [7]
+spectresigpngd6=${spectresignatures:%=spectreconwaysig%_d6.png}
+spectresigpngd6z=${spectresignatures:%=spectreconwaysig%_d6z.png}
+spectresigpngd6zz=${spectresignatures:%=spectreconwaysig%_d6zz.png}
+spectresigpngd7z=${spectresignatures:%=spectreconwaysig%_d7z.png}
+
+spectresigsd6: $(spectresigpngd6) spectreconwaysig[5][3]_d6.png
+spectresigsd6z: $(spectresigpngd6z) spectreconwaysig[5][3]_d6z.png
+spectresigsd6zz: $(spectresigpngd6zz) spectreconwaysig[5][3]_d6zz.png
+
+#
+# HAT HOLES
+#
 
 hatholezlevels=1 2 3 4 5
 hatholes=$(hatholezlevels:%=hathole_z%.png)
 
 hatholepngs: $(hatholes)
+
+#
+#
+#
 
 yellowtopviews = yellow_brick_road_topview01 yellow_brick_road_topview023 yellow_brick_road_3clusters
 paths=01 023
@@ -41,6 +69,10 @@ povoptspng = -D +a +W1024 +H768
 
 hatnumbers.png: einstein.pov
 	povray -D $< Declare=numbers=1 Declare=arrow=1 +O$@
+
+#
+# HAT SIGNATURES
+#
 
 hatconwaysig[0][6]_d6z.png: hatconwaysig.pov
 	povray $(povoptspng) $< Declare=Sigh=000000 Declare=Sigl=000000 Declare=Sigh2=666666 Declare=Sigl2=666666 Declare=up2=60 Declare=down2=26 Declare=depth=6 Declare=zoomout=4 +Otmp_pippoz.png
@@ -79,6 +111,28 @@ $(hatsigpngd6):hatconwaysig%_d6.png:hatconwaysig.pov hatsig2povopt.sh
 
 $(hatsigpngd6z):hatconwaysig%_d6z.png:hatconwaysig.pov hatsig2povopt.sh
 	./hatsig2povopt.sh -q $* povray Declare=depth=6 Declare=zoomout=4 $(povoptspng) +O- >$@
+
+#
+# SPECTRE SIGNATURES
+#
+
+spectreconwaysig[5][3]_d6.png: spectreconwaysig.pov
+	povray $(povoptspng) $< Declare=Sigh=555555 Declare=Sigl=555555 Declare=Sigh2=333333 Declare=Sigl2=333333 Declare=up2=05 Declare=down2=27 Declare=depth=6 Declare=zoomout=6 +Otmp_pippo.png
+	mv tmp_pippo.png $@
+
+spectreconwaysig[5][3]_d6z.png: spectreconwaysig.pov
+	povray $(povoptspng) $< Declare=Sigh=555555 Declare=Sigl=555555 Declare=Sigh2=333333 Declare=Sigl2=333333 Declare=up2=05 Declare=down2=27 Declare=depth=6 Declare=zoomout=4 +Otmp_pippoz.png
+	mv tmp_pippoz.png $@
+
+$(spectresigpngd6):spectreconwaysig%_d6.png:spectreconwaysig.pov spectresig2povopt.sh
+	./spectresig2povopt.sh -q $* povray Declare=depth=6 $(povoptspng) +O- >$@
+
+$(spectresigpngd6z):spectreconwaysig%_d6z.png:spectreconwaysig.pov spectresig2povopt.sh
+	./spectresig2povopt.sh -q $* povray Declare=depth=6 Declare=zoomout=4 $(povoptspng) +O- >$@
+
+#
+#
+#
 
 $(hatholes): hathole_z%.png: hathole.pov
 	echo $*
