Second alternate defective tiling with hexagonal hole

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -46,7 +46,8 @@ spectreholes=$(spectreholezlevels:%=spectrehole_z%.png)
 spectrehole2s=$(spectreholezlevels:%=spectrehole2_z%.png)
 spectrehole2slices=$(spectreholezlevels:%=spectrehole2slice_z%.png)
 spectrehole2alts=$(spectreholezlevels:%=spectrehole2alt_z%.png)
-spectreholepngs: $(spectreholes) $(spectrehole2s) $(spectrehole2slices) $(spectrehole2alts)
+spectrehole2alt2s=$(spectreholezlevels:%=spectrehole2alt2_z%.png)
+spectreholepngs: $(spectreholes) $(spectrehole2s) $(spectrehole2slices) $(spectrehole2alts) $(spectrehole2alt2s)
 
 #
 #
@@ -229,6 +230,9 @@ $(spectrehole2slices): spectrehole2slice_z%.png: spectrehole2.pov
 
 $(spectrehole2alts): spectrehole2alt_z%.png: spectrehole2.pov
 	povray $(povoptspng) $< Declare=depth=5 Declare=zoomout=$* Declare=alt=1 +O$@
+
+$(spectrehole2alt2s): spectrehole2alt2_z%.png: spectrehole2.pov
+	povray $(povoptspng) $< Declare=depth=5 Declare=zoomout=$* Declare=alt=2 +O$@
 
 yellow_brick_road_topview01.png: yellow_brick_road.pov
 	povray $(povoptspng) $< Declare=depth=4 Declare=topview=2 Declare=buildtheback=3 +O$@
